--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#" id="menu">
             <img src="images/free-icon-font-grid-3917002.png" alt="그리드">
         </a>
-        <a href="#" >
+        <a href="loginpage.html" >
             <button id="login">로그인</button>
         </a>
     </nav>
@@ -36,10 +36,10 @@
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <input type="text" placeholder="Google 검색 또는 URL 입력" >
                 <a href="#">
-                    <img src="images/tia.png" alt="검색" title="검색">
+                    <img src="images/tia.png" alt="검색" title="검색" id="tia">
                 </a>
                 <a href="#">
-                    <img src="images/googlemic_color_24dp.png" alt="음성인식" title="음성인식">
+                    <img src="images/googlemic_color_24dp.png" alt="음성인식" title="음성인식" id="mic">
                 </a>
             </div>
             <!-- 웹사이트 버튼 -->
