--- a/noticepage.html
+++ b/noticepage.html
@@ -6,11 +6,16 @@
     <title>공지사항</title>
     <!-- 파비콘 -->
     <link rel="icon" href="images/googleg_standard_color_128dp.png">
+    <!-- 픈트 어썸 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/noticepage.css">
 </head>
 <body>
     <div class="notice">
+        <div id="close">
+            <i class="fa-solid fa-x"></i>
+        </div>
         <!-- <img src="images/notice.jpg" alt="공지사항 배경"> -->
         <h2>공지사항</h2>
         <ul>
