--- a/loginpage.html
+++ b/loginpage.html
@@ -42,7 +42,7 @@
                 </li>
             </ul>
             <button class="logup"><a href="index.html">가입하기</a></button>
-            <button class="notice"><a href="noticepage.html">공지 창 열기</a></button>
+            <button class="notice"><a href="noticepage.html" target="_blank">공지 창 열기</a></button>
         </form>
     </div>
 </body>
