onclick 페이지 이동, alert 띄우기

--- a/loginpage.html
+++ b/loginpage.html
@@ -41,8 +41,8 @@
                     <input type="text" name="passwardcheck" id="passwardcheck" placeholder="비밀번호 확인">
                 </li>
             </ul>
-            <button class="logup"><a href="index.html">가입하기</a></button>
-            <button class="notice"><a href="noticepage.html" target="_blank">공지 창 열기</a></button>
+            <button class="logup"><a href="#" onclick="alert('로그인이 완료 되었습니다.') ">가입하기</a></button>
+            <button class="notice"><a href="#" onclick="alert('공지사항')" target="_blank">공지 창 열기</a></button>
         </form>
     </div>
 </body>
