--- a/noticepage.html
+++ b/noticepage.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="notice">
-        <div id="close">
+        <div id="close" onclick="window.close()">
             <i class="fa-solid fa-x"></i>
         </div>
         <!-- <img src="images/notice.jpg" alt="공지사항 배경"> -->
