--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#" id="menu">
             <img src="images/free-icon-font-grid-3917002.png" alt="그리드">
         </a>
-        <a href="loginpage.html" >
+        <a href="#" onclick="window.open('loginpage.html')" >
             <button id="login">로그인</button>
         </a>
     </nav>
